--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,15 @@
-version: "3.9"
-
 services:
-  postgres:
-    image: postgres:16
-    container_name: postgres_db
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: app_db
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - app-network
-
   mongodb:
-    image: mongo:7
-    container_name: mongo_db
+    image: mongo:latest
+    container_name: mikan_db
     restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: mongo
-      MONGO_INITDB_ROOT_PASSWORD: mongo
-      MONGO_INITDB_DATABASE: logs_db
     ports:
       - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password123
     volumes:
-      - mongo_data:/data/db
-    networks:
-      - app-network
+      - mikan_data:/data/db
 
 volumes:
-  postgres_data:
-  mongo_data:
-
-networks:
-  app-network:
-    driver: bridge
+  mikan_data:
